--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,18 +1,77 @@
----
----
 
-@article{domingue2021variation,
+%%%%%%%%%%
+% PAPERS %
+%%%%%%%%%%
+
+% 2025
+
+@article{domingue2025intermodel,
   keywords={paper},
-  title={Variation in respondent speed and its implications: Evidence from an adaptive testing scenario},
-  author={Domingue, Benjamin W and Kanopka, Klint and Stenhaug, Ben and Soland, James and Kuhfeld, Megan and Wise, Steve and Piech, Chris},
-  journal={Journal of Educational Measurement},
-  volume={58},
+  title={The InterModel Vigorish (IMV) as a flexible and portable approach for quantifying predictive accuracy with binary outcomes},
+  author={Domingue, Benjamin W and Rahal, Charles and Faul, Jessica and Freese, Jeremy and Kanopka, Klint and Rigos, Alexandros and Stenhaug, Ben and Tripathi, Ajay Shanker},
+  journal={PloS one},
+  volume={20},
   number={3},
-  pages={335--363},
-  year={2021},
-  publisher={Wiley Online Library}
+  pages={e0316491},
+  year={2025},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
+@article{ma2025roar,
+  keywords={paper},
+  title={ROAR-CAT: Rapid Online Assessment of Reading ability with Computerized Adaptive Testing},
+  author={Ma, Wanjing Anya and Richie-Halford, Adam and Burkhardt, Amy K and Kanopka, Klint and Chou, Clementine and Domingue, Benjamin W and Yeatman, Jason D},
+  journal={Behavior Research Methods},
+  volume={57},
+  number={1},
+  pages={1--17},
+  year={2025},
+  publisher={Springer}
+}
+
+
+% 2024
+
+@article{kapoor2024differences,
+  keywords={paper},
+  title={Differences in Time Usage as a Competing Hypothesis for Observed Group Differences in Accuracy with an Application to Observed Gender Differences in PISA Data},
+  author={Kapoor, Radhika and Fahle, Erin and Kanopka, Klint and Klinowski, David and Ribeiro, Ana Carolina Trindade and Domingue, Benjamin W.},
+  year={2024},
+  journal={Journal of Educational Measurement}
+}
+
+@article{trejo2024using,
+  keywords={paper},
+  title={Using the phenotype differences model to identify genetic effects in samples of partially genotyped sibling pairs},
+  author={Trejo, Sam and Kanopka, Klint},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={121},
+  number={49},
+  pages={e2405725121},
+  year={2024},
+  publisher={National Academy of Sciences}
+}
+
+@article{kanopka2024position,
+  keywords={paper},
+  title={A Position-Sensitive Mixture Item Response Model},
+  author={Kanopka, Klint and Domingue, Benjamin W},
+  journal={Journal of Educational and Behavioral Statistics},
+  pages={10769986241289399},
+  year={2024},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+
+@article{moeller2024educational,
+  keywords={paper},
+  title={Educational capitalisation: a co-formational feminist framework for conceptualising investment in for-profit education within the racialised and gendered political economy},
+  author={Moeller, Kathryn J and Kanopka, Klint and French, Joanna and Hook, Tyler and Sedighi, Mariam},
+  journal={Globalisation, Societies and Education},
+  pages={1--15},
+  year={2024},
+  publisher={Taylor \& Francis}
+}
 
 @article{kanopka2024changes,
   keywords={paper},
@@ -24,30 +83,29 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
-
-@article{domingue2022modeling,
+@article{domingue2024irtimv,
   keywords={paper},
-  title={Modeling interaction and dispersion effects in the analysis of gene-by-environment interaction},
-  author={Domingue, Benjamin W and Kanopka, Klint and Mallard, Travis T and Trejo, Sam and Tucker-Drob, Elliot M},
-  journal={Behavior genetics},
-  volume={52},
-  number={1},
-  pages={56--64},
-  year={2022},
+  title={The InterModel Vigorish as a lens for understanding (and quantifying) the value of item response models for dichotomously coded items},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Kapoor, Radhika and Pohl, Steffi and Chalmers, R Philip and Rahal, Charles and Rhemtulla, Mijke},
+  journal={Psychometrika},
+  pages={1--21},
+  year={2024},
   publisher={Springer}
 }
 
-@article{yeatman2021rapid,
+
+@article{caffarra2024development,
   keywords={paper},
-  title={Rapid online assessment of reading ability},
-  author={Yeatman, Jason D and Tang, Kenny An and Donnelly, Patrick M and Yablonski, Maya and Ramamurthy, Mahalakshmi and Karipidis, Iliana I and Caffarra, Sendy and Takada, Megumi E and Kanopka, Klint and Ben-Shachar, Michal and others},
-  journal={Scientific reports},
-  volume={11},
-  number={1},
-  pages={6396},
-  year={2021},
-  publisher={Nature Publishing Group UK London}
+  title={Development of the alpha rhythm is linked to visual white matter pathways and visual detection performance},
+  author={Caffarra, Sendy and Kanopka, Klint and Kruper, John and Richie-Halford, Adam and Roy, Ethan and Rokem, Ariel and Yeatman, Jason D},
+  journal={Journal of Neuroscience},
+  volume={44},
+  number={6},
+  year={2024},
+  publisher={Soc Neuroscience}
 }
+
+% 2023
 
 @article{biernacki2023long,  
   keywords={paper},
@@ -61,22 +119,10 @@
   publisher={Taylor \& Francis}
 }
 
-@article{domingue2022speed,
-  keywords={paper},
-  title={Speed--Accuracy Trade-Off? Not So Fast: Marginal Changes in Speed Have Inconsistent Relationships With Accuracy in Real-World Settings},
-  author={Domingue, Benjamin W and Kanopka, Klint and Stenhaug, Ben and Sulik, Michael J and Beverly, Tanesia and Brinkhuis, Matthieu and Circi, Ruhan and Faul, Jessica and Liao, Dandan and McCandliss, Bruce and others},
-  journal={Journal of Educational and Behavioral Statistics},
-  volume={47},
-  number={5},
-  pages={576--602},
-  year={2022},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
-}
-
 @article{ulitzsch2023probabilistic,
   keywords={paper},
   title={A Probabilistic Filtering Approach to Non-Effortful Responding},
-  author={Ulitzsch, Esther and Domingue, Benjamin W and Kapoor, Radhika and Kanopka, Klint and Rios, Joseph A},
+  author={Ulitzsch, Esther and Domingue, Benjamin W. and Kapoor, Radhika and Kanopka, Klint and Rios, Joseph A},
   journal={Educational Measurement: Issues and Practice},
   year={2023},
   publisher={Wiley Online Library}
@@ -94,80 +140,122 @@
   publisher={The Association for Research in Vision and Ophthalmology}
 }
 
-@article{caffarra2024development,
-  keywords={paper},
-  title={Development of the alpha rhythm is linked to visual white matter pathways and visual detection performance},
-  author={Caffarra, Sendy and Kanopka, Klint and Kruper, John and Richie-Halford, Adam and Roy, Ethan and Rokem, Ariel and Yeatman, Jason D},
-  journal={Journal of Neuroscience},
-  volume={44},
-  number={6},
-  year={2024},
-  publisher={Soc Neuroscience}
-}
+
+% 2022
 
 @article{domingue2022ubiquitous,
   keywords={paper},
   title={Ubiquitous bias and false discovery due to model misspecification in analysis of statistical interactions: The role of the outcome’s distribution and metric properties.},
-  author={Domingue, Benjamin W and Kanopka, Klint and Trejo, Sam and Rhemtulla, Mijke and Tucker-Drob, Elliot M},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Trejo, Sam and Rhemtulla, Mijke and Tucker-Drob, Elliot M},
   journal={Psychological Methods},
   year={2022}
 }
 
-@article{domingue2024irtimv,
+@article{domingue2022speed,
   keywords={paper},
-  title={The InterModel Vigorish as a lens for understanding (and quantifying) the value of item response models for dichotomously coded items},
-  author={Domingue, Ben and Kanopka, Klint and Kapoor, Radhika and Pohl, Steffi and Chalmers, R. Philip and Rahal, Charles and Rhemtulla, Mijke},
-  year={2024},
-  journal={Psychometrika}
-}
-
-
-% preprints
-
-@article{domingue2023item,
-  keywords={preprint},
-  title={The Item Response Warehouse (IRW)},
-  author={Domingue, Ben and Kanopka, Klint},
-  year={2023},
-  journal={PsyArXiv}
-}
-
-@article{ma2023roar,
-  keywords={preprint},
-  title={ROAR-CAT: Rapid Online Assessment of Reading ability with Computerized Adaptive Testing},
-  author={Ma, Wanjing Anya and Richie-Halford, Adam and Burkhardt, Amy and Kanopka, Klint and Chou, Clementine and Domingue, Ben and Yeatman, Jason D},
-  year={2023},
-  journal={PsyArXiv}
-}
-
-@article{kanopka2022position,
-  keywords={preprint},
-  title={A position sensitive IRT mixture model},
-  author={Kanopka, Klint and Domingue, Ben},
+  title={Speed--Accuracy Trade-Off? Not So Fast: Marginal Changes in Speed Have Inconsistent Relationships With Accuracy in Real-World Settings},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Stenhaug, Ben and Sulik, Michael J and Beverly, Tanesia and Brinkhuis, Matthieu and Circi, Ruhan and Faul, Jessica and Liao, Dandan and McCandliss, Bruce and others},
+  journal={Journal of Educational and Behavioral Statistics},
+  volume={47},
+  number={5},
+  pages={576--602},
   year={2022},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{domingue2022modeling,
+  keywords={paper},
+  title={Modeling interaction and dispersion effects in the analysis of gene-by-environment interaction},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Mallard, Travis T and Trejo, Sam and Tucker-Drob, Elliot M},
+  journal={Behavior genetics},
+  volume={52},
+  number={1},
+  pages={56--64},
+  year={2022},
+  publisher={Springer}
+}
+
+$ 2021
+
+
+@article{domingue2021variation,
+  keywords={paper},
+  title={Variation in respondent speed and its implications: Evidence from an adaptive testing scenario},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Stenhaug, Ben and Soland, James and Kuhfeld, Megan and Wise, Steve and Piech, Chris},
+  journal={Journal of Educational Measurement},
+  volume={58},
+  number={3},
+  pages={335--363},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{yeatman2021rapid,
+  keywords={paper},
+  title={Rapid online assessment of reading ability},
+  author={Yeatman, Jason D and Tang, Kenny An and Donnelly, Patrick M and Yablonski, Maya and Ramamurthy, Mahalakshmi and Karipidis, Iliana I and Caffarra, Sendy and Takada, Megumi E and Kanopka, Klint and Ben-Shachar, Michal and others},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={6396},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+
+%%%%%%%%%%%%%
+% Preprints %
+%%%%%%%%%%%%%
+
+@article{zhang2025realistic,
+  keywords={preprint},
+  title={Realistic Simulation of Item Difficulties},
+  author={Zhang, Lijin and Liu, Yiqing and Molenaar, Dylan Gilbert, Josh and Kanopka, Klint and Domingue, Benjamin W},
+  year={2025},
   journal={PsyArXiv}
 }
 
-@article{trejo2023phenotype,
-  keywords={preprint},
-  title={The Phenotype Differences Model Reveals Genetic Effects on Mortality Using Incomplete Sibling Data},
-  author={Trejo, Sam and Kanopka, Klint},
-  year={2023},
+
+@article{deng2024mapping,
+  keywords={preprint, student},
+  title={Mapping the Participation of Venture Capital in Education: An Investment Network Perspective},
+  author={Deng, Sophia and Siswandjo, Jasmine and Kanopka, Klint},
+  year={2024},
   journal={SocArXiv}
 }
+
+@article{ramamurthy2024visual,
+  keywords={preprint},
+  title={Visual Tasks as Language-agnostic Early Identification Measures of Reading Challenges},
+  author={Ramamurthy, Mahalakshmi and Kanopka, Klint and Siebert, Julian M. and Yan, Lucy and Townley-Flores, Carrie and Zegers, Monica and Pei, Francesca and Bell, Phaedra and Catts, Hugh W. and Luisa, Gorno Tempini Maria and Yeatman, Jason D},
+  year={2024},
+  journal={PsyArXiv}
+}
+
+
+@misc{domingue2024solving,
+  keywords={preprint},
+  title={Solving the problem of data in psychometrics: An introduction to the Item Response Warehouse (IRW)},
+  author={Domingue, Ben and Braginsky, Mika and Caffrey-Maffei, Lucy and Gilbert, Joshua B and Kanopka, Klint and Kapoor, Radhika and Liu, Yiqing and Nadela, Savira and Pan, Guanzhong and Zhang, Lijin and others},
+  year={2024},
+  journal={PsyArXiv}
+}
+
+
+@article{ramamurthy2024design,
+  keywords={preprint},
+  title={Design and Validation of a Rapid Visual Processing Measure for Screening Reading Difficulties in Early Childhood},
+  author={Ramamurthy, Mahalakshmi and Kanopka, Klint and Richie-Halford, Adam and Domingue, Benjamin W. and Pei, Francesca and Bell, Phaedra and Yan, Lucy and Hartsough, Andrea and Luisa, Gorno Tempini Maria and Yeatman, Jason D},
+  year={2024},
+  journal={PsyArXiv}
+}
+
+
 
 @article{domingue2023implied,
   keywords={preprint},
   title={Implied probabilities of polytomous response functions for model-based prediction and comparison},
-  author={Domingue, Ben and Kanopka, Klint and Ulitzsch, Esther and Zhang, Lijin},
-  year={2023},
-  journal={PsyArXiv}
-}
-
-@article{kapoor2023differences,
-  keywords={preprint},
-  title={Differences in time usage as a competing hypothesis for observed group differences in accuracy with an application to observed gender differences in PISA data},
-  author={Kapoor, Radhika and Fahle, Erin and Kanopka, Klint and Klinowski, David and Ribeiro, Ana Carolina Trindade and Domingue, Ben},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Ulitzsch, Esther and Zhang, Lijin},
   year={2023},
   journal={PsyArXiv}
 }
@@ -175,21 +263,31 @@
 @article{zhang2023intermodel,
   keywords={preprint},
   title={The InterModel Vigorish for Model Comparison in Confirmatory Factor Analysis with Binary Outcomes},
-  author={Zhang, Lijin and Kanopka, Klint and Rahal, Charles and Ulitzsch, Esther and Zhang, Zhiyong and Domingue, Benjamin},
+  author={Zhang, Lijin and Kanopka, Klint and Rahal, Charles and Ulitzsch, Esther and Zhang, Zhiyong and Domingue, Benjamin W.},
   journal={PsyArXiv},
   year={2023}
 }
 
-@article{domingue2021intermodel,
-  keywords={preprint},
-  title={The InterModel Vigorish (IMV) as a flexible and portable approach for quantifying predictive accuracy with binary outcomes},
-  author={Domingue, Ben and Rahal, Charles and Faul, Jessica and Freese, Jeremy and Kanopka, Klint and Rigos, Alexandros and Stenhaug, Ben and Tripathi, Ajay},
-  year={2021},
-  journal={SocArXiv}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Conference Proceedings %
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%
+% Book Chapters %
+%%%%%%%%%%%%%%%%%
+
+@incollection{ruizprimo2025measurement,
+  keywords={bookchapter},
+  editor={Cohen-Vogel, Lora and Youngs, Peter and Scott, Janelle},
+  author={Ruiz-Primo, Maria Araceli and Kanopka, Klint and Hernandez, Philip A.},
+  booktitle={Handbook of Education Policy Research},
+  edition={2nd},
+  title={Measuring, Assessing, or Just Testing Student Achievement? Evidence From Some States’ Testing Programs in the United States},
+  publisher={American Educational Research Association},
+  year={2025},
+  chapter={26},
+  pages={511--542}
 }
-
-
-% Conference Proceedings
 
 @inproceedings{mongkhonvanit2019deep,
   keywords={confpaper},
@@ -200,6 +298,344 @@
   year={2019}
 }
 
+
+
+%%%%%%%%%%
+% Briefs %
+%%%%%%%%%%
+
+@article{kanopka2020pacebrief,
+  keywords={brief},
+  title={What Do Changes in Social-Emotional Learning Tell Us About Changes in Academic and Behavioral Outcomes?},
+  author={Kanopka, Klint and Claro, Susana and Loeb, Susanna and West, Martin R and Fricke, Hans},
+  journal={Policy Analysis for California Education},
+  year={2020}
+}
+
+
+%%%%%%%%%%%%%%%%%
+% Invited Talks %
+%%%%%%%%%%%%%%%%%
+
+@conference{kanopka2024fordham,
+  keywords={invtalk,selected},
+  author={Kanopka, Klint},
+  title={A Position-Sensitive Mixture Item Response Model},
+  year={2024},
+  organization={Fordham Psychometrics Seminar at Fordham University}
+}
+
+@conference{kanopka2023shre,
+  keywords={invtalk,selected},
+  author={Kanopka, Klint and Moeller, Kathryn},
+  title={Following the capital: Using Investment Networks to Understand Venture Capital’s Influence on Education},
+  year={2023},
+  organization={Society for Research into Higher Education Digital University Network Event on the Political Economy of EdTech}
+}
+
+@conference{kanopka2021bear,
+  keywords={invtalk,selected},
+  author={Kanopka, Klint},
+  title={Good Luck with the Blue Book! An IRT Mixture Model for Position Effects},
+  year={2021},
+  organization={Berkeley Evaluation \& Assessment Research (BEAR) Seminar at UC Berkeley}
+}
+
+
+
+%%%%%%%%%%%%%%%%%%%%
+% Conference Talks %
+%%%%%%%%%%%%%%%%%%%%
+
+@conference{lu2025lassoshortform,
+  keywords={student,conftalk},
+  author={Lu, Yining and Huang, Yuan and Kanopka, Klint},
+  title={Assessing the Representativeness of LLM-Generated Item Responses Using Latent Class Analysis},
+  year={2025},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+} 
+
+@conference{kanopka2025polypredict,
+  keywords={conftalk},
+  author={Kanopka, Klint},
+  title={Prediction quality of a range of polytomous models applied to a large data corpus},
+  year={2025},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+} 
+
+@conference{kanopka2025mcmcshortform,
+  keywords={conftalk},
+  author={Kanopka, Klint and Zhang, Xiaoxuan and Harel, Daphna},
+  title={A Markov Chain Monte Carlo Procedure with Simulated Annealing for Short Form Creation},
+  year={2025},
+  organization={International Objective Measurement Workshop}
+} 
+
+
+@conference{kanopka2024lassoshortform,
+  keywords={conftalk},
+  author={Kanopka, Klint and Harel, Daphna},
+  title={A LASSO approach for short form item selection},
+  year={2024},
+  organization={International Meeting of the Psychometric Society}
+} 
+
+@conference{domingue2024irwtalkimps,
+  keywords={conftalk},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Braginksy, Mika and Zhang, Lijin and Caffrey-Maffei, Lucy and Kapoor, Radhika and Liu, Yiqing and Zhang, Susu and Frank, Mike},
+  title={The Item Response Warehouse (IRW): A Large Open Repository of Response Data},
+  year={2024},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{domingue2024impprobtalk,
+  keywords={conftalk},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Ulitzsch, Esther and Zhang, Lijin},
+  title={Implied Probabilities of Polytomous Response Functions for Model-Based Prediction and Comparison},
+  year={2024},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{domingue2024irwtalk,
+  keywords={conftalk},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Caffrey-Maffei, Lucy and Kapoor, Radhika and Zhang, Susu and Liu, Yiqing},
+  title={The Item Response Warehouse (IRW): A Large Open Repository of Response Data},
+  year={2024},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{kapoor2023orpe,
+  keywords={conftalk},
+  author={Kapoor, Radhika and Ruiz-Primo, Maria Araceli and Hernandez, Phil and Kanopka, Klint},
+  title={Online Response Process Procedures: Affordances and Constraints to Collect, Analyze, and Interpret Validity Information},
+  year={2023},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{wang2023context,
+  keywords={conftalk},
+  author={Wang, Nixi and Li, Min and Kanopka, Klint and Dong, Dongsheng and Hernandez, Phil and Ruiz-Primo, Maria Araceli},
+  title={Modeling Context Characteristics for Contextualized Assessment: A Bayesian Contextualized Item Response Model},
+  year={2023},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{domingue2023imvirt,
+  keywords={conftalk},
+  author={Domingue, Benjamin W. and Kanopka, Klint and Kapoor, Radhika and Pohl, Steffi and Chalmers, R. Phillip and Rahal, Charles and Rhemtulla, Mijke},
+  title={Applying the Intermodel Vigorish to Quantify the Value of Item Response Modeling},
+  year={2023},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{kanopka2023ddm,
+  keywords={conftalk},
+  author={Kanopka, Klint and Yeatman, Jason and Burkhardt, Amy},
+  title={Incorporating Response Time Using Drift Diffusion Models in an Online Reading Assessment},
+  year={2023},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{ulitzsch2023filtering,
+  keywords={conftalk},
+  author={Ulitzsch, Esther and Rios, Joseph A. and Kapoor, Radhika and Kanopka, Klint and Domingue, Benjamin W.},
+  title={A Probabilistic Filtering Approach to Accounting for Noneffortful Responding},
+  year={2023},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{kanopka2023essays,
+  keywords={conftalk},
+  author={Kanopka, Klint and Lang, David and Alvero, Aaron},
+  title={Weighing Algorithmic Tradeoffs: Observations from 60,000 Admission Essays},
+  year={2023},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{kapoor2023angrist,
+  keywords={conftalk},
+  author={Kapoor, Radhika and Kanopka, Klint and Domingue, Benjamin W.},
+  title={Revisiting Angrist et al. (2021): Merging International Assessment Data Is Not Easy},
+  year={2023},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+
+@conference{kanopka2023investment,
+  keywords={conftalk},
+  author={Kanopka, Klint and Hook, Tyler J.},
+  title={Following the capital: Using Investment Networks to Understand Venture Capital’s Influence on Education},
+  year={2023},
+  organization={Annual Meeting of the Comparative and International Education Society}
+}
+
+@conference{kanopka2023cmpolyimv,
+  keywords={conftalk},
+  author={Kanopka, Klint and Domingue, Benjamin W.},
+  title={Projecting the performance of polytomous item response models onto a common scale with the InterModel Vigorish},
+  year={2023},
+  organization={International Conference on Computational and Methodological Statistics}
+}
+
+@conference{kanopka2023iomwimv,
+  keywords={conftalk},
+  author={Kanopka, Klint and Domingue, Benjamin W. and Ulitzsch, Esther and Kapoor, Radhika and Pohl, Steffi and Chalmer, R. Phillip and Rahal, Charles and Rhemtulla, Mijke},
+  title={Bookmaking for Item Responses: Prediction, Profits, and the IMV},
+  year={2023},
+  organization={International Objective Measurement Workshop}
+}
+
+@conference{kanopka2022ets,
+  keywords={conftalk},
+  author={Kanopka, Klint},
+  title={Profiling Changes in Student Writing: From Failure to Success},
+  year={2022},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{moeller2022edtechvc,
+  keywords={conftalk},
+  author={Moeller, Kathryn and Kanopka, Klint},
+  title={Who Profits from EdTech? An Intersectional Feminist Analysis of Venture Capital Investment in Education},
+  year={2022},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{kanopka2022compvalidity,
+  keywords={conftalk},
+  author={Kanopka, Klint and Domingue, Benjamin W.},
+  title={Good Luck with the Blue Book: Computational Approaches to Fairness and Validity in Admissions Testing},
+  year={2022},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{kanopka2021bluebook,
+  keywords={conftalk},
+  author={Kanopka, Klint and Domingue, Benjamin},
+  title={Addressing the Blue Book Problem: Application of a Position-Sensitive IRT Mixture Model to ENEM 2014},
+  year={2021},
+  organization={International Meeting of the Psychometric Society}
+}
+
+@conference{kanopka2021psirt,
+  keywords={conftalk},
+  author={Kanopka, Klint and Domingue, Benjamin W.},
+  title={An IRT Mixture Model for Item Position Effects},
+  year={2021},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{moeller2021aera,
+  keywords={conftalk},
+  author={Moeller, Kathryn and Kanopka, Klint and French, Jo},
+  title={Venture Capitalists as Educational Actors: Understanding the Racialized Political Economy of Silicon Valley Investments in Education Technology},
+  year={2021},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{moeller2021cies,
+  keywords={conftalk},
+  author={Moeller, Kathryn and Kanopka, Klint and French, Jo},
+  title={Venture Capitalists as Educational Actors: Understanding the Racialized Political Economy of Silicon Valley Investments in Education Technology},
+  year={2021},
+  organization={Annual Meeting of the Comparative and International Education Society}
+}
+
+@conference{kanopka2021mca,
+  keywords={conftalk},
+  author={Kanopka, Klint and Hernandez, Phil and Wang, Nixi and Ruiz-Primo, Maria Araceli and Li, Min and Minstrell, Jim},
+  title={An Application of Multiple Correspondence Analysis to the Experimental Study of Item Context},
+  year={2021},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{ruizprimo2021context,
+  keywords={conftalk},
+  author={Ruiz-Primo, Maria Araceli and Li, Min and Kanopka, Klint and Hernandez, Phil and Dong, Dongsheng and Wang, Nixi and  Minstrell, Jim},
+  title={Analysis and review of context in science: Effects in student performance},
+  year={2021},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{alvero2020call,
+  keywords={conftalk},
+  author={Alvero, Aaron and Sedlacek, Quentin and Kanopka, Klint},
+  title={A Call for Critical and Constructive Data Science in Teacher Eduaction},
+  year={2020},
+  organization={AERA Conference on Educational Data Science}
+}
+
+@conference{claro2020sel,
+  keywords={conftalk},
+  author={Claro, Susana and Kanopka, Klint and West, Martin and Loeb, Susanna and Fricke, Hans},
+  title={Exploring the relationship Between Changes in Social-Emotional skills and Achievement},
+  year={2020},
+  organization={Annual Meeting of the American Educational Research Association (Conference Cancelled)}
+}
+
+@conference{ruizprimo2020mapping,
+  keywords={conftalk},
+  author={Ruiz-Primo, Maria Araceli and Li, Min and Minstrell, Jim and Dong, Dongsheng and Kanopka, Klint and Hernandez, Phil},
+  title={Mapping the Characteristics of Contexts in Science Items: The Case of Forces and Motion Items},
+  year={2020},
+  organization={Annual Meeting of the American Educational Research Association (Conference Cancelled)}
+}
+
+@conference{munoznajar2019discontinuities,
+  keywords={conftalk},
+  author={Munoz-Najar Galvez, Sebastian and Kanopka, Klint and Alvero, Aaron},
+  title={Identifying (Dis)Continuities in EdTech’s Discourse of Invention},
+  year={2019},
+  organization={Text Analysis Across Domains}
+}
+
+@conference{kanopka2019defensive,
+  keywords={conftalk},
+  author={Kanopka, Klint},
+  title={Addressing Defensive Objections: Adversarial Examples in Automatic Essay Scoring},
+  year={2019},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{ruizprimo2019contextualized,
+  keywords={conftalk},
+  author={Ruiz-Primo, Maria Araceli and Li, Min and Minstrell, Jim and Zhai, Xiaoming and Kanopka, Klint and Hernandez, Phil and Dong, Dongsheng},
+  title={Contextualized Science Assessments: Addressing the Use of Information and Generalization of Inferences of Students’ Performance},
+  year={2019},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{zhai2019manyfacet,
+  keywords={conftalk},
+  author={Zhai, Xiaoming and Ruiz-Primo, Maria Araceli and Li, Min and Dong, Dongsheng and Kanopka, Klint and Hernandez, Phil and Minstrell, Jim},
+  title={Using Many-Facet Rasch Model to Examine Student Performance on Contextualized Science Assessment},
+  year={2019},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{hernandez2019validity,
+  keywords={conftalk},
+  author={Hernandez, Phil and Ruiz-Primo, Maria Araceli and Zhai, Xiaoming and Kanopka, Klint},
+  title={Validity Study of Linked Items to Determine Student Fundamental ideas},
+  year={2019},
+  organization={Annual Meeting of the American Educational Research Association}
+}
+
+@conference{ruizprimo2019domain,
+  keywords={conftalk},
+  author={Ruiz-Primo, Maria Araceli and Li, Min and Minstrell, Jim and Zhai, Xiaoming and Dong, Dongsheng and Kanopka, Klint and Hernandez, Phil},
+  title={Testing the Generalization to the Domain Inference: The Use of Contextualized Clusters of Items},
+  year={2019},
+  organization={Annual Meeting of the National Council on Measurement in Education}
+}
+
+@conference{kanopka2019nonparallel,
+  keywords={conftalk},
+  author={Kanopka, Klint},
+  title={Diagnosing Non-Parallelism in Hierarchically Contextualized Physics Assessments},
+  year={2019},
+  organization={Annual Meeting of the National Association for Research in Science Teaching}
+}
 
 
 
